Navbar - Fix logo alignment with sidebar

--- a/src/scss/base/_reset_docusaurus.scss
+++ b/src/scss/base/_reset_docusaurus.scss
@@ -83,7 +83,7 @@ We must use `!important` at times to override some default styles.
 }
 
 .navbar__logo {
-  margin: 0 0 0 2rem;
+  margin: 0 0 0 0.9rem;
   max-width: 100%;
   vertical-align: middle;
   height: auto;
