--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -29,7 +29,7 @@
 
   @media screen and (min-width: variables.$screen-md) {
     --ifm-navbar-padding-vertical: 30px;
-    --ifm-navbar-padding-horizontal: 3.5rem;
+    --ifm-navbar-padding-horizontal: 3.2rem;
   }
 }
 
